--- a/TemplateSpartaneApp/TemplateSpartaneApp.Android/TemplateSpartaneApp.Android.csproj
+++ b/TemplateSpartaneApp/TemplateSpartaneApp.Android/TemplateSpartaneApp.Android.csproj
@@ -206,6 +206,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\deslizar_black.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\enlace.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\close.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
