--- a/TemplateSpartaneApp/TemplateSpartaneApp/TemplateSpartaneApp.csproj
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/TemplateSpartaneApp.csproj
@@ -80,7 +80,13 @@
     <EmbeddedResource Update="Views\Popups\AgregarSuplementoPopup.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\Popups\AlertProductosPopup.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Popups\PacientesPopup.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ProductosNutricionales\ProductoOralSeleccionadoPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\ProductosNutricionales\ProductosNutricionalesPage.xaml">
