- continuar con funcionalidad

--- a/TemplateSpartaneApp/TemplateSpartaneApp/TemplateSpartaneApp.csproj
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/TemplateSpartaneApp.csproj
@@ -89,6 +89,9 @@
     <EmbeddedResource Update="Views\ProductosNutricionales\ProductoOralSeleccionadoPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\ProductosNutricionales\ProductosEnteralesPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\ProductosNutricionales\ProductosNutricionalesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
