- terminando cambios vistas

--- a/TemplateSpartaneApp/TemplateSpartaneApp.Android/TemplateSpartaneApp.Android.csproj
+++ b/TemplateSpartaneApp/TemplateSpartaneApp.Android/TemplateSpartaneApp.Android.csproj
@@ -248,6 +248,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon_right.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\menu_bar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\group_image_two.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
