--- a/TemplateSpartaneApp/TemplateSpartaneApp.iOS/TemplateSpartaneApp.iOS.csproj
+++ b/TemplateSpartaneApp/TemplateSpartaneApp.iOS/TemplateSpartaneApp.iOS.csproj
@@ -200,6 +200,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Plugin.MaterialDesignControls">
+      <Version>1.12.0</Version>
+    </PackageReference>
     <PackageReference Include="Prism.Unity.Forms" Version="7.0.0.396" />
     <PackageReference Include="Xamarin.CommunityToolkit">
       <Version>2.0.6</Version>
