--- a/TemplateSpartaneApp/TemplateSpartaneApp/TemplateSpartaneApp.csproj
+++ b/TemplateSpartaneApp/TemplateSpartaneApp/TemplateSpartaneApp.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Plugin.MaterialDesignControls" Version="1.12.0" />
     <PackageReference Include="Prism.Unity.Forms" Version="8.1.97" />
     <PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.6" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2578" />
