--- a/TemplateSpartaneApp/TemplateSpartaneApp.Android/TemplateSpartaneApp.Android.csproj
+++ b/TemplateSpartaneApp/TemplateSpartaneApp.Android/TemplateSpartaneApp.Android.csproj
@@ -257,6 +257,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\group_image_two.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon_user.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
