--- a/TemplateSpartaneApp/TemplateSpartaneApp.Android/TemplateSpartaneApp.Android.csproj
+++ b/TemplateSpartaneApp/TemplateSpartaneApp.Android/TemplateSpartaneApp.Android.csproj
@@ -260,6 +260,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon_user.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\filter_round.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
